--- a/src/pages/personal-info/personal-info.html
+++ b/src/pages/personal-info/personal-info.html
@@ -73,6 +73,7 @@
   <!--</ion-row>-->
   <!--</ion-item>-->
   <!--</ion-list>-->
-  <qr-code [value]="'1231234'" [size]="150" [backgroundAlpha]="0.5" [padding]="10"></qr-code>
+  <!--<qr-code [value]="'1231234'" [size]="150" [backgroundAlpha]="0.5" [padding]="10"></qr-code>-->
+  <!--<qrcode [qrdata]="'Your QR code data string'" [size]="256" [level]="'M'"></qrcode>-->
 
 </ion-content>
