--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,18 +2,18 @@
   <ion-navbar>
     <ion-buttons start>
       <button tappable ion-button icon-only (click)="goHomeMenuPage()">
-        <ion-icon name="menu"></ion-icon>
+        <ion-icon color="Gray-color" name="menu"></ion-icon>
       </button>
     </ion-buttons>
     <ion-title>
-      <div>
+      <div >
         <span>Jimmy</span><br/>
-        <span>欢迎来到{{factoryName}}</span>
+        <span class="cut-title">欢迎来到{{factoryName}}</span>
       </div>
     </ion-title>
     <ion-buttons end>
       <button tappable ion-button icon-only (click)="goSettingPage()" >
-        <ion-icon name="settings">
+        <ion-icon color="Gray-color" name="settings">
         </ion-icon>
       </button>
     </ion-buttons>
@@ -30,23 +30,30 @@
 <ion-content>
   <ion-card tappable (click)="gotoWaitingUse()">
     <ion-card-header>
-      今日您已预订
+      <ion-icon ios="ios-basket" md="md-basket"></ion-icon>
+      <span >今日您已预订</span>
     </ion-card-header>
 
     <ion-slides *ngIf="orderList?.length > 0">
 
       <ion-slide *ngFor="let item of orderList" >
         <img src="{{item.imgUrl}}"/>
-        <div class="card-title">{{item.productName}} ({{item.factoryName}}-{{item.officeName}})
-          <ion-badge>
+        <div class="card-title">
+          <div style="font-size: 2rem">
+            {{item.productName}}
+          </div>
+          <div style="font-size: 1.7rem">
+            {{item.factoryName}}-{{item.officeName}}
+          </div>
+          <div style="font-size: 2rem">
             {{item.label}}
-          </ion-badge>
+          </div>
         </div>
       </ion-slide>
 
     </ion-slides>
 
-    <div *ngIf="orderList?.length === 0">
+    <div *ngIf="orderList?.length === 0" class="no-product">
       <h5>暂无预定</h5>
     </div>
 
@@ -54,19 +61,19 @@
 
 
   <ion-card tappable (click)="gotoOrder(factoryName)">
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">
+    <img src="assets/imgs/2.png"/>
+    <div class="order-tile">
       立即预订
     </div>
   </ion-card>
 
   <ion-card>
-    <img src="assets/imgs/bf.jpg"/>
-    <div class="card-title">
+    <img src="assets/imgs/3.png"/>
+    <div class="order-tile">
       新闻
     </div>
   </ion-card>
-  <qr-code [value]="'1231234'" [size]="150" [backgroundAlpha]="0.5" [padding]="10"></qr-code>
+  <!--<qr-code [value]="'1231234'" [size]="150" [backgroundAlpha]="0.5" [padding]="10"></qr-code>-->
 </ion-content>
 
 
