--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,41 +1,36 @@
-
 <ion-content >
-  <div class="logo">
-    <img src='assets/imgs/logo.png' alt="">
-  </div>
-  <div class="logo">
-    <h2>订餐系统</h2>
-  </div>
-  <ion-list>
+  <!--<div class="logo">-->
+    <!--<h2>订餐系统</h2>-->
+  <!--</div>-->
+  <ion-list class="login-input" no-lines padding>
 
-    <ion-item>
-      <ion-label>
-        <ion-icon name="md-person"></ion-icon>
-        <!--<span style="margin-left: 2vw">员工号</span>-->
-      </ion-label>
-      <ion-input placeholder="员工号" type="text"></ion-input>
+    <ion-item class="input-inner">
+      <ion-label class="input-font" stacked>员工号：</ion-label>
+      <ion-input [(ngModel)]="name"  type="text"></ion-input>
     </ion-item>
 
-    <ion-item>
-      <ion-label>
-        <ion-icon name="md-lock"></ion-icon>
-        <!--<span style="margin-left: 2vw">密码</span>-->
-      </ion-label>
-      <ion-input placeholder="密码" type="password"></ion-input>
+    <ion-item class="input-inner">
+      <ion-label  stacked>密码：</ion-label>
+      <ion-input [(ngModel)]="password" class="pwd-input"  type="{{type}}"></ion-input>
+      <ion-icon tappable class="icon-eye" *ngIf="type !== 'password'"  item-right name="ios-eye-outline" (click)="changeType()"></ion-icon>
+      <ion-icon tappable class="icon-eye" *ngIf="type === 'password'" item-right name="ios-eye" (click)="changeType()"></ion-icon>
     </ion-item>
 
   </ion-list>
 
   <div padding>
-    <button ion-button block>登陆</button>
+    <button ion-button color="Gray-color" block (click)="doLogin()">登陆</button>
   </div>
-  <div padding>
-    <span tappable (click)="openForgetPwd()" class="forget-pwd">忘记密码</span>
+  <div>
+    <span tappable (click)="openForgetPwd()" class="forget-pwd">忘记密码?</span>
   </div>
-  <div class="bottom-tips" padding>
-    <p>
-      登录密码与EsquelPass(溢达通)相同；若首次登录，则默认密码为出生日期后6位（如生日为19880101，默认密码为880101）
-    </p>
+  <div class="logo">
+    <img src='assets/imgs/login_logo.png' alt="">
   </div>
+  <!--<div class="bottom-tips" padding>-->
+    <!--<p>-->
+      <!--登录密码与EsquelPass(溢达通)相同；若首次登录，则默认密码为出生日期后6位（如生日为19880101，默认密码为880101）-->
+    <!--</p>-->
+  <!--</div>-->
 
 </ion-content>
