--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,13 +28,13 @@
 <!--</ion-content>-->
 
 <ion-content>
-  <ion-card tappable (click)="gotoWaitingUse()">
-    <ion-card-header>
-      <ion-icon ios="ios-basket" md="md-basket"></ion-icon>
-      <span >今日您已预订</span>
-    </ion-card-header>
+  <ion-card *ngIf="orderList?.length > 0" tappable (click)="gotoWaitingUse()">
+    <!--<ion-card-header>-->
+      <!--<ion-icon ios="ios-basket" md="md-basket"></ion-icon>-->
+      <!--<span >今日您已预订</span>-->
+    <!--</ion-card-header>-->
 
-    <ion-slides *ngIf="orderList?.length > 0" pager>
+    <ion-slides pager>
 
       <ion-slide *ngFor="let item of orderList" >
         <img src="{{item.imgUrl}}"/>
@@ -67,7 +67,7 @@
     </div>
   </ion-card>
 
-  <ion-card>
+  <ion-card >
     <img src="assets/imgs/3.png"/>
     <div class="order-tile">
       新闻
