--- a/src/pages/waiting-use/waiting-use.html
+++ b/src/pages/waiting-use/waiting-use.html
@@ -1,22 +1,19 @@
-<!--
-  Generated template for the WaitingUsePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-buttons start>
       <button tappable ion-button icon-only (click)="goHomeMenuPage()">
-        <ion-icon name="menu"></ion-icon>
+        <ion-icon color="Gray-color" name="menu"></ion-icon>
       </button>
     </ion-buttons>
     <ion-title>
-      待消费
+      <div >
+        <span>Jimmy</span><br/>
+        <span class="cut-title">欢迎来到{{factoryName}}</span>
+      </div>
     </ion-title>
     <ion-buttons end>
       <button tappable ion-button icon-only (click)="goSettingPage()" >
-        <ion-icon name="settings">
+        <ion-icon color="Gray-color" name="settings">
         </ion-icon>
       </button>
     </ion-buttons>
@@ -33,10 +30,16 @@
     <ion-item-sliding *ngFor="let p of item.list" style="margin-bottom: 3vh">
       <ion-item>
         <img src="assets/imgs/3.png"/>
-        <div class="card-title">{{p.productName}} x 1份（{{p.factoryName}}{{p.officeName}}）
-          <ion-badge>
+        <div class="card-title">
+          <div style="font-size: 2rem">
             {{p.mealType}}
-          </ion-badge>
+          </div>
+          <div style="font-size: 1.7rem">
+            {{p.productName}}
+          </div>
+          <div style="font-size: 1.7rem">
+            {{p.factoryName}}-{{p.officeName}}
+          </div>
         </div>
       </ion-item>
       <ion-item-options side="right">
