--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,8 +12,8 @@
     <ion-item class="input-inner">
       <ion-label  stacked>密码：</ion-label>
       <ion-input [(ngModel)]="password" class="pwd-input"  type="{{type}}"></ion-input>
-      <ion-icon tappable class="icon-eye" *ngIf="type !== 'password'"  item-right name="ios-eye-outline" (click)="changeType()"></ion-icon>
-      <ion-icon tappable class="icon-eye" *ngIf="type === 'password'" item-right name="ios-eye" (click)="changeType()"></ion-icon>
+      <ion-icon tappable class="icon-eye" *ngIf="type !== 'password'"  item-right name="ios-eye-outline" (click)="changeType($event)"></ion-icon>
+      <ion-icon tappable class="icon-eye" *ngIf="type === 'password'" item-right name="ios-eye" (click)="changeType($event)"></ion-icon>
     </ion-item>
 
   </ion-list>
